# gpar2

./: AUTHORS  ChangeLog  Makefile.am  Makefile.bak  Makefile.in  PKGBUILD  README  aclocal.m4  config.h.in  configure  configure.ac  gpar2.cc  gpar2.desktop  gpar2.h  gpar2.xml  mainwindow.cc  mainwindow.h
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debian/: changelog  control  copyright  dirs  gpar2.1  postinst  postrm  rules
m4/: ChangeLog  Makefile.in
po/: ChangeLog  POTFILES  POTFILES.in  fr.gmo  fr.po  fr.po~  gpar2.pot
